fix this damned overflow issue

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body
     background-color: #191919;
     color:rgb(224, 224, 224);
     font-size:1.5rem;
-    height:100%;
 }
 
 hr
@@ -41,7 +40,7 @@ a
 #cursor-container
 {
     width:100%;
-    min-height:100%;
+    height:100%;
     position:absolute;
     overflow: hidden;
     z-index:-1;
@@ -52,8 +51,7 @@ a
     position:relative;
     width:500px;
     height:500px;
-    background: #161616;
-    background: radial-gradient(#191919, #161616);
+    background: radial-gradient(#171717, #161616);
     border-radius: 50%;
     transition-duration: 1s;
     transition-timing-function: ease-in-out;
